Updated docs, fixed some warnings
Updated the readme to reflect recent changes.

Bumped the version number from 1.0 to 1.1

Fixed or suppressed some minor warnings.